# deconvovo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-windows.yml
config/: analytes_adp.csv  calibrants_protein_all.csv  calibrants_protein_unfolded.csv  calibrants_tunemix.csv  ccs_calibrant_table.json  imms_plot_config.json
deconvovo/: __init__.py  ccs_convert.py  ccs_fit.py  ccs_peak_pick.py  ccs_plot.py  cli.py  imms_ccs_calibrate.py  imms_convert.py  imms_deconv.py  imms_html.py  imms_plot.py  imms_summary.py  io.py  parallel.py  smooth.py  taskqueue.py  waters_convert.py
deconvovo/vendors/: __init__.py  waters.py
demo_data/: analytes_customized.csv  calibrants_customized.csv
demo_data/20260320_AGILENT_TUNE_MIX_V2.raw/: _FUNC001.IDX  _FUNC001.STS  _FUNC002.IDX  _HEADER.TXT  _HISTORY.INF  _PROC001.IDX  _PROC001.SIG  _extern.inf  _func001.ind  _func002.cdt  _func002.ind
demo_data/20260320_BETAINE_V2.raw/: _FUNC001.IDX  _FUNC001.STS  _FUNC002.IDX  _FUNCTNS.INF  _HEADER.TXT  _HISTORY.INF  _PROC001.IDX  _PROC001.SIG  _PROC001.STS  _extern.inf  _func001.cdt  _func001.ind  _func002.cdt  _func002.ind
docs/: ISOTOPE_SCORING_RESEARCH.md  SMOOTHING_METHODS.md
docs/docs_backup/: CALIBRATION_TWOSTEP.md  CCS_CALIBRATION_WORKFLOW.md  CCS_METHOD_COMPARISON.md  CLIPS_MS_ANALYSIS.md  MS_DEISOTOPE_ANALYSIS.md  PIPELINE_WATERS_IMMS.md  PLAN_CCS_CALIBRATION.md  PUSHER_PERIOD.md
docs/docs_safe/: CALIBRATION_DIRECT.md  CCS_LITERATURE_VALIDATION.md  DEUTERIUM_CALCULATOR_ANALYSIS.md  HDX_ADDITIONAL_TOOLS.md  (+9 more)
gui/: __init__.py  app.py  theme.py
(+34 files in other folders)
